examples/type_system/failing/55_strict_any_return_rejected.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

public fn id(x: Int) -> Any {
    x
}

fn main() -> Unit {
}
